--- a/public/animatedCounter.html
+++ b/public/animatedCounter.html
@@ -53,6 +53,6 @@
    
     </section>
 
-    <script src="../assets/js/animated_Counter_(updated).js"></script>
+    <script src="../assets/js/animatedCounter.js"></script>
   </body>
 </html>
